Backend API establishment